Estrutura Flask e Chat

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <link rel="icon" href="static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="static\css\geral.css">
-    <link rel="stylesheet" href="static\css\header.css">
-    <link rel="stylesheet" href="static\css\introducao.css">
-    <link rel="stylesheet" href="static\css\aspectos.css">
-    <link rel="stylesheet" href="static\css\estatuto.css">
-    <link rel="stylesheet" href="static\css\recursos.css">
-    <link rel="stylesheet" href="static\css\divisão.css">
-    <link rel="stylesheet" href="static\css\riscos.css">
-    <link rel="stylesheet" href="static\css\footer.css">
-    <link rel="stylesheet" href="static\css\modal.css">
-    <link rel="stylesheet" href="static\css\status-modal.css">
-    <link rel="stylesheet" href="static\css\chat.css">
-    <link rel="stylesheet" href="static\css\media.css">
+    <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/static/css/geral.css">
+    <link rel="stylesheet" href="/static/css/header.css">
+    <link rel="stylesheet" href="/static/css/introducao.css">
+    <link rel="stylesheet" href="/static/css/aspectos.css">
+    <link rel="stylesheet" href="/static/css/estatuto.css">
+    <link rel="stylesheet" href="/static/css/recursos.css">
+    <link rel="stylesheet" href="/static/css/divisão.css">
+    <link rel="stylesheet" href="/static/css/riscos.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
+    <link rel="stylesheet" href="/static/css/modal.css">
+    <link rel="stylesheet" href="/static/css/status-modal.css">
+    <link rel="stylesheet" href="/static/css/chat.css">
+    <link rel="stylesheet" href="/static/css/media.css">
 </head>
 <body>
     <nav id="navbar">
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="#aspectos">Aspectos</a></li>
                 <li><a href="#riscos">Riscos</a></li>
-                <img src="static/img/logo.png" alt="Logo principal do site" id="logo-nav">
+                <img src="/static/img/logo.png" alt="Logo principal do site" id="logo-nav">
                 <li><a href="#recursos">Recursos</a></li>
                 <li id="li-chat"><span class="material-symbols-outlined">chat</span>Chat</li>
             </ul>
@@ -38,7 +38,7 @@
     <div class="stack">
         <div id="header-video-background">
             <video autoplay loop muted playsinline class="background-video">
-                <source src="static\img\header\video-header.mp4" type="video/mp4">
+                <source src="/static/img/header/video-header.mp4" type="video/mp4">
                 Seu navegador não suporta vídeos.
             </video>
         </div>
@@ -46,7 +46,7 @@
         <div id="header-gradiente"></div>
 
         <div id="header-title">
-            <img src="static\img\logo.png" alt="Logo principal do site" id="logo-title">
+            <img src="/static/img/logo.png" alt="Logo principal do site" id="logo-title">
             <div id="header-texto">
                 <h1 id="header-h1">Lorem Ipsum</h1>
                 <p id="header-p">Lorem ipsum dolor sit amet consectetur adisciping elit</p>
@@ -222,7 +222,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="350" src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="350" src="/static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
@@ -230,7 +230,7 @@
                         <p>A falta de monitoramento online expõe dados privados, por isso, é essencial a supervisão ou ferramentas de mediação para proteção.</p>
                         <button onclick="abrirModal('Acesso à informações privadas', 'O acesso a informações privadas dos usuários é um dos riscos associados à exposição não monitorada da internet. Sem a proteção necessária, informações como localização e dados pessoais podem ser facilmente coletadas e utilizadas de forma inadequada. Assim, é importante o uso acompanhado da internet ou de ferramentas de mediação para evitar a exposição de informações privadas.')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="/static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
@@ -238,7 +238,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="/static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
                 </div>
             </div>
             <div class="direita">
@@ -248,7 +248,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="400" src="static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="400" src="/static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
@@ -256,7 +256,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/criancas-marista.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="/static/img/riscos/criancas-marista.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
@@ -264,14 +264,14 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
                         <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="250" src="static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="250" src="/static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
                 </div>
             </div>
         </section>
     </article>
 
     <article class="seção reveal" id="estatuto">
-        <h2 class="titulo"><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"><span>Estatuto da Criança e do Adolescente</span><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
+        <h2 class="titulo"><img src="/static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"><span>Estatuto da Criança e do Adolescente</span><img src="/static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
         <p class="texto">O Estatuto da Criança e do Adolescente (ECA), instituído pela Lei nº 8.069, de 1990, é um marco legal que assegura os direitos fundamentais de crianças e adolescentes no Brasil. Ele estabelece um conjunto de normas e diretrizes voltadas para a proteção, a educação, a saúde, a liberdade e o desenvolvimento integral dos jovens, garantindo que sejam tratados com dignidade e respeito. O ECA também aborda a responsabilidade da sociedade, da família e do Estado em assegurar essas condições, além de prever medidas para combater abusos e negligência. Com base no princípio da proteção integral, esse estatuto visa promover um ambiente seguro e saudável para o crescimento e a participação ativa de crianças e adolescentes na sociedade.</p>
     
         <div class="conteudo-estatuto">
@@ -279,7 +279,7 @@
                 <p class="texto"><b>Art. 4º</b> É dever da família, da comunidade, da sociedade em geral e do poder público assegurar, com absoluta prioridade, a efetivação dos direitos referentes à vida, à saúde, à alimentação, à educação, ao esporte, ao lazer, à profissionalização, à cultura, à dignidade, ao respeito, à liberdade e à convivência familiar e comunitária.</p>
             </div>
             <div id="imagens-estatuto">
-                <img src="static/img/estatuto/imagens-estatuto.png" alt="" id="livro-estatuto">
+                <img src="/static/img/estatuto/imagens-estatuto.png" alt="" id="livro-estatuto">
             </div>
         </div>
     </article>
@@ -303,49 +303,49 @@
                 <div class="colecao-cards">
 
                     <div class="card ativo">
-                        <img src="static/img/recursos/famisafe.jpg" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/famisafe.jpg" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">FamiSafe</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://famisafe.wondershare.com/br/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/familylink.png" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/familylink.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Google Family Link</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://familylink.google.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/kasperskysafekids.jpg" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/kasperskysafekids.jpg" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Kaspersky Safe Kids</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://www.kaspersky.com.br/safe-kids" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/mcafeesafefamily.png" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/mcafeesafefamily.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">McAfee Safe Family</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://family.mcafee.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/netnanny.png" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/netnanny.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Net Nanny</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://www.netnanny.com/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/nortonfamily.png" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/nortonfamily.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Norton Family</h5>
                         <p class="texto-card">Ajuda pais a cuidar das crianças, filtrando conteúdo e controlando o tempo de tela.</p>
                         <a target="_blank" href="https://br.norton.com/products/norton-family?om_sem_cid=hho_sem_sy:~pt-br_nor_n36_sch_gen_dsa_nfr_adw_nad_low:pt_nb~c_kw0000692901&gad_source=1&gclid=Cj0KCQiAoae5BhCNARIsADVLzZcDhLsnaCKnMckbrbAovVA72tYhwRXmtkkMTpueUoZEv5UmTRdhJCwaAtXJEALw_wcB&gclsrc=aw.ds"><button class="botao-saibamais">Saiba mais</button></a>
                     </div>
 
                     <div class="card">
-                        <img src="static/img/recursos/qustodio.png" alt="" id="logo-ferramenta">
+                        <img src="/static/img/recursos/qustodio.png" alt="" id="logo-ferramenta">
                         <h5 class="titulo-card">Qustodio</h5>
                         <p class="texto-card">Início de um texto sobre a ferramenta</p>
                         <a href="https://www.qustodio.com/pt-br/" target="_blank"><button class="botao-saibamais">Saiba mais</button></a>
@@ -370,7 +370,7 @@
             </div>
             <div class="direita">
                 <div>
-                    <img src="static/img/logo.png" alt="">
+                    <img src="/static/img/logo.png" alt="">
                     <h3 class="titulo">Nome site</h3>
                 </div>
                 <a href="login.html" class="restrito"><span class="material-symbols-outlined">lock</span><span>Área Restrita</span></a>
@@ -417,13 +417,13 @@
         </div>
     </div>
 
-    <script src="static/js/navbar.js"></script>
-    <script src="static/js/revelacao.js"></script>
-    <script src="static/js/recursos.js"></script>
-    <script src="static/js/estatuto.js"></script>
-    <script src="static/js/footer.js"></script>
-    <script src="static/js/status-modal.js"></script>
-    <script src="static/js/modal.js"></script>
-    <script src="static/js/chat.js"></script>
-</body>
+    <script src="/static/js/navbar.js"></script>
+    <script src="/static/js/revelacao.js"></script>
+    <script src="/static/js/recursos.js"></script>
+    <script src="/static/js/estatuto.js"></script>
+    <script src="/static/js/footer.js"></script>
+    <script src="/static/js/status-modal.js"></script>
+    <script src="/static/js/modal.js"></script>
+    <script src="/static/js/chat.js"></script>
+</body> 
 </html>
