--- a/templates/e-mail.html
+++ b/templates/e-mail.html
@@ -6,10 +6,10 @@
     <title>E-mail</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="icon" href="static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="static\css\geral.css">
-    <link rel="stylesheet" href="static\css\newsletter.css">
-    <link rel="stylesheet" href="static\css\status-modal.css">
-    <link rel="stylesheet" href="static\css\media.css">
+    <link rel="stylesheet" href="/static/css/geral.css">
+    <link rel="stylesheet" href="/static/css/newsletter.css">
+    <link rel="stylesheet" href="/static/css/status-modal.css">
+    <link rel="stylesheet" href="/static/css/media.css">
 </head>
 <body>
     <nav id="nav-newsletter">
@@ -17,7 +17,7 @@
             <span class="material-symbols-outlined icone-botao">arrow_back</span>
         </button>
         <div class="logo">
-            <img src="static/img/logo.png" alt="">
+            <img src="/static/img/logo.png" alt="">
             <h1>Lorem ipsum</h1>
         </div>
     </nav>
@@ -36,7 +36,7 @@
         </div>
         <div class="preview">
             <div class="titulo">
-                <img src="static/img/logo.png" alt="">
+                <img src="/static/img/logo.png" alt="">
                 <h1>Lorem ipsum</h1>
             </div>
             <div class="conteudo">
@@ -48,6 +48,6 @@
             </div>
         </div>
     </main>
-    <script src="static/js/newsletter.js"></script>
+    <script src="/static/js/newsletter.js"></script>
 </body>
 </html>
