--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <link rel="icon" href="static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="static\css\geral.css">
-    <link rel="stylesheet" href="static\css\login.css">
-    <link rel="stylesheet" href="static\css\status-modal.css">
-    <link rel="stylesheet" href="static\css\media.css">
+    <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/static/css/geral.css">
+    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href="/static/css/status-modal.css">
+    <link rel="stylesheet" href="/static/css/media.css">
 </head>
 <body>
     <div id="login">
-        <img width="70" src="static/img/logo.png" alt="">
+        <img width="70" src="/static/img/logo.png" alt="">
         <div class="titulo"><span class="material-symbols-outlined">lock</span><span>Área Restrita</span></div>
         <div class="campos">
             <label for="usuario">Usuário</label>
@@ -35,7 +35,7 @@
         </div>
     </div>
     
-    <script src="static/js/status-modal.js"></script>
-    <script src="static/js/login.js"></script>
+    <script src="/static/js/status-modal.js"></script>
+    <script src="/static/js/login.js"></script>
 </body>
 </html>
