--- a/templates/newsletter-menu.html
+++ b/templates/newsletter-menu.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <link rel="icon" href="static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="static\css\geral.css">
-    <link rel="stylesheet" href="static\css\newsletter.css">
-    <link rel="stylesheet" href="static\css\status-modal.css">
-    <link rel="stylesheet" href="static\css\media.css">
+    <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/static/css/geral.css">
+    <link rel="stylesheet" href="/static/css/newsletter.css">
+    <link rel="stylesheet" href="/static/css/status-modal.css">
+    <link rel="stylesheet" href="/static/css/media.css">
 </head>
 <body>
     <nav id="nav-newsletter">
@@ -17,7 +17,7 @@
             <span class="material-symbols-outlined icone-botao">arrow_back</span>
         </button> -->
         <div class="logo">
-            <img src="static/img/logo.png" alt="">
+            <img src="/static/img/logo.png" alt="">
             <h1>Lorem ipsum</h1>
         </div>
         <button class="novo-e-mail">
@@ -101,7 +101,7 @@
             <span class="material-symbols-outlined fechar">close</span>
         </div>
     </div>
-    <script src="static/js/modal-newsletter.js"></script>
-    <script src="static/js/status-modal.js"></script>
+    <script src="/static/js/modal-newsletter.js"></script>
+    <script src="/static/js/status-modal.js"></script>
 </body>
 </html>
