--- a/templates/index.html
+++ b/templates/index.html
@@ -373,7 +373,7 @@
                     <img src="/static/img/logo.png" alt="">
                     <h3 class="titulo">Nome site</h3>
                 </div>
-                <a href="login.html" class="restrito"><span class="material-symbols-outlined">lock</span><span>Área Restrita</span></a>
+                <a href="/admin/login" class="restrito"><span class="material-symbols-outlined">lock</span><span>Área Restrita</span></a>
             </div>
 
         </div>
