--- a/static/css/newsletter.css
+++ b/static/css/newsletter.css
@@ -334,3 +334,45 @@
     font-weight: bold;
     text-decoration: none;
 }
+
+#e-mail-botoes {
+    position: fixed;
+    top: 100%;
+    left: 100%;
+    transform: translate(-100%, -100%);
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em;
+}
+
+#e-mail-botoes .botao {
+    color: white;
+    font-size: 4em;
+    font-weight: bold;
+    padding: 0.25em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50%;
+    user-select: none;
+    cursor: pointer;
+    transition: .2s;
+}
+
+#e-mail-botoes .salvar {
+    background-color: rgb(0, 102, 255);
+}
+
+#e-mail-botoes .salvar:hover {
+    background-color: rgb(0, 41, 102);
+}
+
+#e-mail-botoes .enviar {
+    background-color: rgb(0, 204, 82);
+}
+
+#e-mail-botoes .enviar:hover {
+    background-color: rgb(0, 102, 41);
+}
