--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -34,6 +34,7 @@
 }
 
 #modal button {
+    font-family: 'Inter', sans-serif;
     background-color: #b3a972;
     color: white;
     padding: 0.5em;
