--- a/static/css/newsletter.css
+++ b/static/css/newsletter.css
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    cursor: pointer;
 }
 
 #nav-newsletter .logo h1 {
