--- a/templates/newsletter-menu.html
+++ b/templates/newsletter-menu.html
@@ -30,51 +30,13 @@
                 <h3>Novo e-mail</h3>
                 <span class="material-symbols-outlined status">add</span>
             </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">edit</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
-            <div class="e-mail">
-                <span class="material-symbols-outlined icone">mail</span>
-                <h3>Título</h3>
-                <span class="material-symbols-outlined status">check</span>
-            </div>
+            {% for email in emails %}
+                <div class="e-mail" onclick="window.location.href='/admin/newsletter/e-mail/{{ email.id }}'">
+                    <span class="material-symbols-outlined icone">mail</span>
+                    <h3>Título</h3>
+                    <span class="material-symbols-outlined status">{{'check' if email.enviado else 'edit'}}</span>
+                </div>
+            {% endfor %}
         </div>
     </main>
     <div id="newsletter-modal">
@@ -98,6 +60,7 @@
             <span class="material-symbols-outlined fechar">close</span>
         </div>
     </div>
+    <script src="/static/js/menu-newsletter.js"></script>
     <script src="/static/js/modal-newsletter.js"></script>
     <script src="/static/js/status-modal.js"></script>
 </body>
