Modal de confirmação

--- a/templates/e-mail.html
+++ b/templates/e-mail.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/geral.css">
     <link rel="stylesheet" href="/static/css/newsletter.css">
     <link rel="stylesheet" href="/static/css/status-modal.css">
+    <link rel="stylesheet" href="/static/css/confirmar-modal.css">
     <link rel="stylesheet" href="/static/css/media.css">
 </head>
 <body>
@@ -66,7 +67,18 @@
             <span class="material-symbols-outlined fechar">close</span>
         </div>
     </div>
+    <div id="confirmar-modal">
+        <div class="container">
+            <h3 class="titulo">Título</h3>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
+            <div class="botoes">
+                <button class="confirmar">Confirmar</button>
+                <button class="fechar">Fechar</button>
+            </div>
+        </div>
+    </div>
     <script src="/static/js/status-modal.js"></script>
+    <script src="/static/js/modal-confirmar.js"></script>
     <script src="/static/js/newsletter.js"></script>
 </body>
 </html>
