--- a/static/css/media.css
+++ b/static/css/media.css
@@ -23,6 +23,10 @@
         padding-inline: 10em;
     }
 
+    #confirmar-modal {
+        padding-inline: 10em;
+    }
+
     #chat {
         padding-inline: 10em;
     }
@@ -137,6 +141,10 @@
     }
 
     #modal {
+        padding-inline: 5em;
+    }
+
+    #confirmar-modal {
         padding-inline: 5em;
     }
     
@@ -324,6 +332,10 @@
     }
 
     #modal {
+        padding-inline: 1em;
+    }
+
+    #confirmar-modal {
         padding-inline: 1em;
     }
 
