--- a/templates/newsletter-menu.html
+++ b/templates/newsletter-menu.html
@@ -15,7 +15,7 @@
     <nav id="nav-newsletter">
         <div class="logo">
             <img src="/static/img/logo.png" alt="">
-            <h1>Lorem ipsum</h1>
+            <h1>SafeSurfing</h1>
         </div>
         <button class="novo-e-mail">
             <span>Novo e-mail</span>
