--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -20,7 +20,7 @@ footer .esquerda {
 footer .direita div {
     flex-direction: row;
     display: flex;
-    gap: 1em;
+    gap: 0.75em;
 } 
 
 footer .direita {
@@ -64,7 +64,8 @@ footer .esquerda button {
 } 
 
 footer .direita h3 {
-    line-height: 1em;
+    font-size: 1.75em;
+    line-height: 1.5em;
 }
 
 footer .direita .restrito {
