--- a/static/css/media.css
+++ b/static/css/media.css
@@ -380,7 +380,9 @@
     }
 
     footer .direita img {
+        align-self: center;
         height: 10em;
+        width: max-content;
     }
 
     footer .esquerda input {
