--- a/templates/e-mail.html
+++ b/templates/e-mail.html
@@ -19,7 +19,7 @@
         </button>
         <div class="logo">
             <img src="/static/img/logo.png" alt="">
-            <h1>Lorem ipsum</h1>
+            <h1>SafeSurfing</h1>
         </div>
     </nav>
     <main id="e-mail">
@@ -38,7 +38,7 @@
         <div class="preview">
             <div class="titulo">
                 <img src="/static/img/logo.png" alt="">
-                <h1>Lorem ipsum</h1>
+                <h1>SafeSurfing</h1>
             </div>
             <div class="conteudo">
                 <h2></h2>
