Mudanças no template

--- a/templates/e-mail-template.html
+++ b/templates/e-mail-template.html
@@ -91,7 +91,7 @@
     </div>
     <div id="rodape">
         <p>Não deseja mais receber e-mails?</p>
-        <a href="{{ prefixo_site + '/' + codigo_inscrito }}">Cancelar inscrição</a>
+        <a href="{{ prefixo_site + '/newsletter/' + codigo_inscrito }}">Cancelar inscrição</a>
     </div>
 </body>
 </html>
