Correção do URL da imagem da logo no template do e-mail

--- a/templates/e-mail-template.html
+++ b/templates/e-mail-template.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div id="titulo">
-        <img alt="" src="https://github.com/dgthaina/SafeSurfing/blob/main/static/img/logo.png" />
+        <img alt="" src="https://github.com/dgthaina/SafeSurfing/blob/main/static/img/logo.png?raw=true" />
         <h1>SafeSurfing</h1>
     </div>
     <div id="conteudo">
